# casadi_generate_cpp

./: CMakeLists.txt  README.md  package.xml
include/my_package/: my_function.h  my_function_cost.h  my_function_delta.h  my_function_gradient.h  my_function_hessian.h
scripts/: c_generate_code.py  casadi_example.py  casadi_example_2.py
src/: my_function_cost.c  my_function_delta.c  my_function_gradient.c  my_function_hessian.c  pointers.cpp
